--- a/templates/Index/elasticsearch-result.html.twig
+++ b/templates/Index/elasticsearch-result.html.twig
@@ -1,5 +1,13 @@
 <div class="sidebar">
-
+    {% for g in genres %}
+        {% if genresCount[g.id] is defined or genresSelected[g.id] is defined %}
+            <div>
+                <a href="#" data-id="{{ g.id }}" class="cat {% if genresSelected[g.id] is defined %}selected{% endif %}">
+                    {{ g.name }}
+                </a>
+            </div>
+        {% endif %}
+    {% endfor %}
 </div>
 <div class="content">
 
