Dodano zliczanie ilości dokumentów w kategoriach wyświetlanych z boku

--- a/templates/Index/elasticsearch-result.html.twig
+++ b/templates/Index/elasticsearch-result.html.twig
@@ -4,6 +4,9 @@
             <div>
                 <a href="#" data-id="{{ g.id }}" class="cat {% if genresSelected[g.id] is defined %}selected{% endif %}">
                     {{ g.name }}
+                    {% if genresCount[g.id] is defined %}
+                        ({{ genresCount[g.id] }})
+                    {% endif %}
                 </a>
             </div>
         {% endif %}
